--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -49,7 +49,7 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Build package
-        run: bun run build
+        run: bun run build:full
 
       - name: Publish to npm
         run: bun publish --access public
