--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "token-compression-middleware",
-  "module": "index.ts",
+  "version": "1.0.0",
+  "module": "dist/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "bun build --outdir dist --target bun --format esm --minify",
+    "build": "bun build index.ts --outdir dist --target bun --format esm --minify",
     "test": "vitest run",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "types": "tsc",
+    "build:full": "bun run build && bun run types"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "typescript": "^5.8.2",
+    "vitest": "^3.1.1"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "@ai-sdk/provider": "1.1.0",
-    "ai": "4.2.9",
-    "vitest": "^3.1.1"
+    "ai": "4.2.9"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
