--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -1,57 +1,32 @@
-name: Test and Release
+publish:
+  name: Publish to npm
+  needs: test
+  if: startsWith(github.ref, 'refs/tags/v')
+  runs-on: ubuntu-latest
 
-on:
-  push:
-    branches:
-      - main
-    tags:
-      - "v*.*.*"
-  pull_request:
-    branches:
-      - main
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-jobs:
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
+    - name: Set up Bun
+      uses: oven-sh/setup-bun@v1
+      with:
+        bun-version: latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Install dependencies
+      run: bun install --frozen-lockfile
 
-      - name: Set up Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
+    - name: Bump package.json version to match tag
+      run: |
+        TAG_VERSION="${GITHUB_REF#refs/tags/v}"
+        echo "Updating package.json version to $TAG_VERSION"
+        bun run --silent 'console.log("no-op")' # workaround to load bun env
+        jq --arg v "$TAG_VERSION" '.version = $v' package.json > temp.json && mv temp.json package.json
 
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
+    - name: Build package
+      run: bun run build:full
 
-      - name: Run tests
-        run: bun test # or bun run test if needed
-
-  publish:
-    name: Publish to npm
-    needs: test
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
-
-      - name: Build package
-        run: bun run build:full
-
-      - name: Publish to npm
-        run: bun publish --access public
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    - name: Publish to npm
+      run: bun publish --access public
+      env:
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
