--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -1,32 +1,64 @@
-publish:
-  name: Publish to npm
-  needs: test
-  if: startsWith(github.ref, 'refs/tags/v')
-  runs-on: ubuntu-latest
+name: Test and Release
 
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+on:
+  push:
+    branches:
+      - main
+    tags:
+      - "v*.*.*"
+  pull_request:
+    branches:
+      - main
 
-    - name: Set up Bun
-      uses: oven-sh/setup-bun@v1
-      with:
-        bun-version: latest
+jobs:
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
 
-    - name: Install dependencies
-      run: bun install --frozen-lockfile
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Bump package.json version to match tag
-      run: |
-        TAG_VERSION="${GITHUB_REF#refs/tags/v}"
-        echo "Updating package.json version to $TAG_VERSION"
-        bun run --silent 'console.log("no-op")' # workaround to load bun env
-        jq --arg v "$TAG_VERSION" '.version = $v' package.json > temp.json && mv temp.json package.json
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
 
-    - name: Build package
-      run: bun run build:full
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
 
-    - name: Publish to npm
-      run: bun publish --access public
-      env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Run tests
+        run: bun test # or bun run test if needed
+
+  publish:
+    name: Publish to npm
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Bump package.json version to match tag
+        run: |
+          TAG_VERSION="${GITHUB_REF#refs/tags/v}"
+          echo "Updating package.json version to $TAG_VERSION"
+          bun run --silent 'console.log("no-op")' # workaround to load bun env
+          jq --arg v "$TAG_VERSION" '.version = $v' package.json > temp.json && mv temp.json package.json
+
+      - name: Build package
+        run: bun run build:full
+
+      - name: Publish to npm
+        run: bun publish --access public
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
