--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "token-compression-middleware",
-  "version": "1.0.0",
-  "module": "dist/index.js",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "1.0.6",
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -15,17 +15,15 @@
     "types": "tsc",
     "build:full": "bun run build && bun run types"
   },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "typescript": "^5.8.2",
-    "vitest": "^3.1.1"
-  },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "ai": "^4.2.0",
+    "@ai-sdk/provider": "^1.1.0",
+    "typescript": ">=5.0.0"
   },
-  "dependencies": {
-    "@ai-sdk/provider": "1.1.0",
-    "ai": "4.2.9"
+  "devDependencies": {
+    "typescript": "^5.8.2",
+    "vitest": "^3.1.1",
+    "@types/bun": "latest"
   },
   "publishConfig": {
     "access": "public"
